# rbmk-1000-sim

./: Cargo.toml  LICENSE  README-RELEASE.txt  README.md
.cargo/: config.toml
.github/rulesets/: main.json
.github/workflows/: release.yml
scenarios/: CHERNOBYL.txt  SIMULATION-TRADEOFFS.txt  chernobyl.json  tutorial.json
src/: config.rs  controls.rs  grid.rs  main.rs  neutron.rs  renderer.rs  renderer_gfx.rs  renderer_tui.rs  scenario.rs  simulation.rs
