[package]
name = "rbmk-1000-sim"
version = "0.1.0"
edition = "2024"

[features]
default = ["tui"]
tui = ["dep:ratatui"]
gfx = ["dep:macroquad"]

[dependencies]
rand = "0.8"
rayon = "1.10"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = { version = "0.29", optional = true }
macroquad = { version = "0.4", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
